Add hamburger menu v1.0

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ body:not(.pewpi-live)>*:not(#pewpi-gate){filter:blur(6px);pointer-events:none}
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>∞ b</title>
 <link rel="stylesheet" href="style.css">
+<script defer src="https://pewpi-infinity.github.io/infinity-crown-index/js/infinity-menu.js"></script>
 </head>
 <body>
 
